# mcp_knowledge_server

./: .env.example  CHANGELOG.md  README.md  docker-compose.yml  pyproject.toml  scratch_check.py  scratch_project_id.py
.github/workflows/: ci.yml
app/: main.py
app/application/dto/: auth.py  documents.py  notes.py  projects.py  tasks.py
app/application/interfaces/: repositories.py
app/application/services/: document_service.py  note_service.py  project_service.py  task_service.py  task_write_service.py
app/core/: config.py  exceptions.py  logging.py  request_context.py  telemetry.py
app/domain/enum/: audit_action.py  document_type.py  task_priority.py
app/domain/enums/: audit_action.py  document_type.py  task_priority.py  task_status.py
app/domain/models/: __init__.py  api_client.py  audit_log.py  document.py  document_chunk.py  note.py  project.py  task.py
app/infrastructure/auth/: api_key_auth.py
app/infrastructure/db/: base.py  models.py  search.py  seed.py  session.py
app/infrastructure/observability/: metrics.py
app/infrastructure/repositories/: api_client_repository.py  audit_log_repository.py  document_repository.py  note_repository.py  project_repository.py  task_repository.py  task_write_repository.py
app/tests/: conftest.py  test_health.py
app/tests/contract/: test_tools_list_contract.py
app/tests/integration/: test_health_endpoint.py  test_mcp_tools_read.py  test_mcp_tools_write.py
app/tests/unit/: test_api_key_auth.py  test_mcp_auth.py
scripts/: scratch_check.py  scratch_project_id.py  scratch_services_check.py
(+18 files in other folders)
