[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-knowledge-server"
version = "0.1.0"
description = "Production-grade MCP knowledge server for LLM agents"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.0,<1.0.0",
    "uvicorn[standard]>=0.35.0,<1.0.0",
    "pydantic>=2.11.0,<3.0.0",
    "pydantic-settings>=2.10.0,<3.0.0",
    "sqlalchemy>=2.0.43,<3.0.0",
    "asyncpg>=0.30.0,<1.0.0",
    "redis>=6.4.0,<7.0.0",
    "alembic>=1.16.0,<2.0.0",
    "psycopg2-binary>=2.9.0,<3.0.0",
    "greenlet>=3.1.0,<4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.0,<9.0.0",
    "pytest-asyncio>=1.1.0,<2.0.0",
    "httpx>=0.28.0,<1.0.0",
    "ruff>=0.12.0,<1.0.0",
    "mypy>=1.17.0,<2.0.0",
]

[tool.setuptools]
packages = ["app"]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
testpaths = ["app/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true